--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,1 @@
-spring.datasource.url=jdbc:h2:mem:KimenFenTest;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-spring.jpa.hibernate.ddl-auto=update
+mongodb+srv://bastian:admin@kimenfen.vbfmbih.mongodb.net/?retryWrites=true&w=majority&appName=Kimenfen
