Conexion base de datos MongoDb Creacion usuarios usuuario repository

--- a/application.yml
+++ b/application.yml
@@ -1,5 +1,5 @@
 spring:
   data:
     mongodb:
-      url: mongodb+srv://bastian:admin@kimenfen.vbfmbih.mongodb.net/?retryWrites=true&w=majority&appName=Kimenfen
+      uri: mongodb+srv://bastian:admin@kimenfen.vbfmbih.mongodb.net/?retryWrites=true&w=majority&appName=Kimenfen
       database: KimenFen
